[project]
name = "infotron"
version = "0.1.0"
description = "personal database manager"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-anthropic>=0.3.17",
    "langchain-community>=0.3.27",
    "langchain-experimental>=0.3.4",
    "python-dotenv>=1.1.1",
    "textual>=3.6.0",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
